--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" type="module"></script>
-  <title>Document</title>
+  <title>Postman Clone</title>
 </head>
+
 <body>
   <div class="p-4">
     <form data-form>
@@ -24,13 +26,16 @@
 
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="query-params-tab" data-bs-toggle="tab" data-bs-target="#query-params" type="button" role="tab" aria-controls="query-params" aria-selected="true">Query Params</button>
+          <button class="nav-link active" id="query-params-tab" data-bs-toggle="tab" data-bs-target="#query-params"
+            type="button" role="tab" aria-controls="query-params" aria-selected="true">Query Params</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="request-headers-tab" data-bs-toggle="tab" data-bs-target="#request-headers" type="button" role="tab" aria-controls="request-headers" aria-selected="false">Headers</button>
+          <button class="nav-link" id="request-headers-tab" data-bs-toggle="tab" data-bs-target="#request-headers"
+            type="button" role="tab" aria-controls="request-headers" aria-selected="false">Headers</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="json-tab" data-bs-toggle="tab" data-bs-target="#json" type="button" role="tab" aria-controls="json" aria-selected="false">JSON</button>
+          <button class="nav-link" id="json-tab" data-bs-toggle="tab" data-bs-target="#json" type="button" role="tab"
+            aria-controls="json" aria-selected="false">JSON</button>
         </li>
       </ul>
 
@@ -65,10 +70,12 @@
 
       <ul class="nav nav-tabs" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="body-tab" data-bs-toggle="tab" data-bs-target="#body" type="button" role="tab" aria-controls="body" aria-selected="true">Body</button>
+          <button class="nav-link active" id="body-tab" data-bs-toggle="tab" data-bs-target="#body" type="button"
+            role="tab" aria-controls="body" aria-selected="true">Body</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="response-headers-tab" data-bs-toggle="tab" data-bs-target="#response-headers" type="button" role="tab" aria-controls="response-headers" aria-selected="false">Headers</button>
+          <button class="nav-link" id="response-headers-tab" data-bs-toggle="tab" data-bs-target="#response-headers"
+            type="button" role="tab" aria-controls="response-headers" aria-selected="false">Headers</button>
         </li>
       </ul>
 
@@ -91,4 +98,5 @@
     </div>
   </template>
 </body>
+
 </html>
